src/shell/snapshots/mise__shell__zsh__tests__deactivate.snap
---
source: src/shell/zsh.rs
expression: replace_path(&deactivate)
---
autoload -Uz add-zsh-hook
add-zsh-hook -d precmd _mise_hook_precmd 2>/dev/null
add-zsh-hook -d chpwd _mise_hook_chpwd 2>/dev/null
(( $+functions[_mise_hook_precmd] )) && unset -f _mise_hook_precmd
(( $+functions[_mise_hook_chpwd] )) && unset -f _mise_hook_chpwd
(( $+functions[_mise_hook] )) && unset -f _mise_hook
(( $+functions[_mise_hook_env_state] )) && unset -f _mise_hook_env_state
(( $+functions[mise] )) && unset -f mise
unset MISE_SHELL
unset __MISE_DIFF
unset __MISE_SESSION
unset __MISE_LOOKUP_EXE
unset __MISE_LOOKUP_ERROR
unset __MISE_ZSH_PRECMD_RUN
unset __MISE_ZSH_CHPWD_RAN
unset __MISE_ZSH_ACTIVATE_PATH
unset __MISE_ZSH_ACTIVATE_ENV
