src/shell/snapshots/mise__shell__zsh__tests__prepend_env.snap
---
source: src/shell/zsh.rs
expression: "replace_path(&sh.prepend_env(\"PATH\", \"/some/dir:/2/dir\"))"
---
export PATH="'/some/dir:/2/dir':$PATH"
