src/shell/snapshots/mise__shell__zsh__tests__prepend_path.snap
---
source: src/shell/zsh.rs
expression: "zsh.prepend_path(&[PathBuf::from(\"/some/dir\")])"
---
export PATH="/some/dir:$PATH"

