src/shell/snapshots/mise__shell__zsh__tests__unset_env.snap
---
source: src/shell/zsh.rs
expression: "Zsh::default().unset_env(\"FOO\")"
snapshot_kind: text
---
unset FOO
